--- a/src/stories/Colors.mdx
+++ b/src/stories/Colors.mdx
@@ -1,10 +1,13 @@
 import { Meta } from "@storybook/addon-docs/blocks";
 
-<Meta title="Colors" />
+import { Colors } from "./Colors.tsx"
+
+<Meta title="Colors" component={Colors} />
 
 <div>
     <header>
         # Colors
         This is a list of colors for the design of this project.
     </header>
+    <Colors />
 </div>
